[metadata]
name = PyTweet
version = attr: pytweet.__version__
author = TheFarGG & TheGenocide
maintainer = TheFarGG, TheGenocide
url = https://github.com/TheFarGG/PyTweet/
description = A Synchronous python API wrapper for the twitter api
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = PyTweet, pytweet, twitter, tweet.py twitter.py
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Utilities
    Development Status :: 5 - Production/Stable,

project_urls = 
    Documentation = https://py-tweet.readthedocs.io/
    Github = https://github.com/TheFarGG/PyTweet/

[options]
include_package_data = true
python_requires = >=3.7
packages = pytweet
setup_requires =
    setuptools
    wheel
install_requires =
    requests
    requests_oauthlib 
    python-dateutil
